Add feature to save to file